[FIX]#60103 - Information text - Registration message doesn't show for Extended Case.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/Index.cshtml
@@ -46,7 +46,7 @@
                     }
                     else
                     {
-                        if (!string.IsNullOrEmpty(Model.CaseRegistrationMessage) && Model.ShowRegistringMessage)
+                        if (Model.ShowRegistringMessage && !string.IsNullOrEmpty(Model.CaseRegistrationMessage))
                         {
                             <div class="alert alert-success">
                                 @Html.Raw(Model.CaseRegistrationMessage.SetHtmlParameters())
