--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -305,39 +305,45 @@
         <li id="extendedcase-tab-@extendedFormId" class="active">
             <a href="#fragment-1">
                 @Translation.Get(Model.ExtendedCaseDataModel.FormModel.Name, Enums.TranslationSource.TextTranslation)
-                <i id="exTabIndicator_@extendedFormId" class="tab-indicator" style="display:none;">&nbsp;</i>
+                <i id="exTabIndicator_@extendedFormId" class="tab-indicator" style="display: none;">&nbsp;</i>
             </a>
         </li>
         @if (ViewBag.AttachmentPlacement == 1 && Model.CaseDataModel.FieldSettings.Select(f => f.Name).Contains(GlobalEnums.TranslationCaseFields.Filename.ToString()) && (Model.CaseId == 0 || (Model.CaseId > 0 && Model.CaseDataModel.CaseFiles != null)))
         {
             <li>
-                <a href="#attachment-tab">@Translation.Get("Attachments", Enums.TranslationSource.TextTranslation) <span id="nrOfAttachedFiles">@(Model.CaseDataModel.CaseFiles != null && Model.CaseDataModel.CaseFiles.Count > 0 ? "(" + Model.CaseDataModel.CaseFiles.Count.ToString() + ")":"")</span></a>
+                <a href="#attachment-tab">@Translation.Get("Attachments", Enums.TranslationSource.TextTranslation) <span id="nrOfAttachedFiles">@(Model.CaseDataModel.CaseFiles != null && Model.CaseDataModel.CaseFiles.Count > 0 ? "(" + Model.CaseDataModel.CaseFiles.Count.ToString() + ")" : "")</span></a>
             </li>
         }
     </ul>
     <div class="content tab-content">
         <div id="fragment-1" class="tab-pane active">
             <div class="container-fluid dh-container">
+                @if (Model.ShowRegistrationMessage && !string.IsNullOrEmpty(Model.CaseRegistrationMessage))
+                {
+                    <div class="alert alert-success">
+                        @Html.Raw(Model.CaseRegistrationMessage.SetHtmlParameters())
+                    </div>
+                }
                 <div id="container_@extendedFormId" class="">
-                    @Html.Partial("_CaseInformation", Model, new ViewDataDictionary { { "Headline", Translation.Get(Model.ExtendedCaseDataModel.FormModel.Name) } })
+                    @Html.Partial("_CaseInformation", Model, new ViewDataDictionary {{"Headline", Translation.Get(Model.ExtendedCaseDataModel.FormModel.Name)}})
                     @*Extended case placement*@
                 </div>
             </div>
         </div>
         @if (ViewBag.AttachmentPlacement == 1 && Model.CaseDataModel.FieldSettings.Select(f => f.Name).Contains(GlobalEnums.TranslationCaseFields.Filename.ToString()) && (Model.CaseId == 0 || (Model.CaseId > 0 && Model.CaseDataModel.CaseFiles != null)))
         {
-            <div id="attachment-tab" class="tab-pane" style="overflow:hidden;">
-                <div> 
+            <div id="attachment-tab" class="tab-pane" style="overflow: hidden;">
+                <div>
                     @*///* This copied code from NewCase.cshtml */
                         ///* TODO: Make partial or shared code */*@
 
-                    <div class="col-md-12" style="margin-top:20px; margin-bottom:0px !important;">
+                    <div class="col-md-12" style="margin-top: 20px; margin-bottom: 0px !important;">
                         @if (Model.CaseId == 0)
-                        { 
+                        {
                             <a id="" href="#NewCase_upload_files_popup" role="button" class="btn btn-default hasAttribute" data-toggle="modal" standardName="@GlobalEnums.TranslationCaseFields.Filename.ToString()">@Translation.Get("Add", Enums.TranslationSource.TextTranslation)</a>
                             <a href="#upload_clipboard_file_popup" role="button" class="btn btn-default hasAttribute" data-src="case" standardName="@GlobalEnums.TranslationCaseFields.Filename.ToString()">@Translation.Get("Add from clipboard", Enums.TranslationSource.TextTranslation)</a>
                         }
-                        <table id="NewCasefiles_table" class="table table-striped" style="margin-top:10px;">
+                        <table id="NewCasefiles_table" class="table table-striped" style="margin-top: 10px;">
                             <tbody>
                             @if (Model.CaseId > 0 && Model.CaseDataModel.CaseFiles != null && Model.CaseDataModel.CaseFiles.Count > 0)
                             {
@@ -345,7 +351,7 @@
                                 {
                                     <tr>
                                         <td>
-                                            <i class="glyphicon glyphicon-file">&nbsp;</i><a style="color:blue" href="@downloadCaseFileCompleteUrl.Replace("{name}", item.FileName).Replace("{id}", Model.CaseId.ToString())">@item.FileName</a>
+                                            <i class="glyphicon glyphicon-file">&nbsp;</i><a style="color: blue" href="@downloadCaseFileCompleteUrl.Replace("{name}", item.FileName).Replace("{id}", Model.CaseId.ToString())">@item.FileName</a>
                                         </td>
                                     </tr>
                                 }
@@ -356,7 +362,7 @@
                 </div>
             </div>
         }
-       
+
 
     </div>
 
@@ -389,12 +395,12 @@
                     <div class="modal-body" style="max-height: 600px; text-align: center;">
                         <form onsubmit="return false;">
                             <div class="form-group">
-                                <label>@Translation.Get("1. Write filename (leave blank for automatic naming)", Enums.TranslationSource.TextTranslation) </label><br />
-                                <input class="" type="text" id="imgFilename" autocomplete="Off" />
+                                <label>@Translation.Get("1. Write filename (leave blank for automatic naming)", Enums.TranslationSource.TextTranslation) </label><br/>
+                                <input class="" type="text" id="imgFilename" autocomplete="Off"/>
                                 <span id="imageNameRequired" style="color: red"> @Translation.Get("must be specified", Enums.TranslationSource.TextTranslation) </span>
                             </div>
                             <div class="form-group">
-                                <label>@(Translation.Get("2. Press Ctrl+V for inserting picture", Enums.TranslationSource.TextTranslation) )</label><br />
+                                <label>@(Translation.Get("2. Press Ctrl+V for inserting picture", Enums.TranslationSource.TextTranslation))</label><br/>
                                 <label>@(Translation.Get("3. Click on Save for adding to case", Enums.TranslationSource.TextTranslation)) </label>
                                 <div id="previewPnl"></div>
                             </div>
