--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/_ContractsIndexRows.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/_ContractsIndexRows.cshtml
@@ -1,6 +1,7 @@
 ﻿@using DH.Helpdesk.Web.Infrastructure
 @using DH.Helpdesk.Common.Enums
 @using DH.Helpdesk.Web.Models.Contract
+@using DH.Helpdesk.Web.Infrastructure.Extensions;
 @model DH.Helpdesk.Web.Models.Contract.ContractsIndexRowsModel
 
 
@@ -77,9 +78,12 @@
 
                                 if (s.ContractField == EnumContractFieldSettings.CaseNumber)
                                 {
-                                    if (row.CaseNumber != 0)
+                                    if (row.ContractCase.CaseNumber != 0)
                                     {
-                                        <td><a href="@Url.Action("edit", "Contracts", new { Id = row.ContractId })">@row.CaseNumber</a></td>
+                                        <td>
+                                            <a href="@Url.Action("edit", "Contracts", new { Id = row.ContractId })">@Html.Raw(string.Format("<img title='{0}' alt='{0}' src='/Content/icons/{1}' />", row.ContractCase.CaseIcon.CaseIconTitle(), row.ContractCase.CaseIcon.CaseIconSrc()))&nbsp;@row.ContractCase.CaseNumber</a>&nbsp;
+                                            @if(row.ContractCase.HasMultiplyCases){ <i class="icon-plus-sign cursor-pointer"></i> }
+                                    </td>
                                     }
                                     else
                                     {
