--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/_Input.cshtml
@@ -564,8 +564,10 @@
     <div class="content-wrapper">
         <div class="loader">@Translation.GetCoreTextTranslation("Laddar...")</div>
     </div>
-</div>
-
+    </div>
+   
+    </div>
+@Html.Hidden("contract_languageId", SessionFacade.CurrentLanguageId)
 @Scripts.Render("~/bundles/contracts/edit")
 
 <script type="text/javascript">
