[FIX] #62038 Admin - user - security

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/_Security.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/_Security.cshtml
@@ -202,7 +202,7 @@
             <td>
                 <input data-field="calendarPermission" type="checkbox" name="User.CalendarPermission" @(Model.User.CalendarPermission == 1 ? "checked=checked" : "") value="1"/>
                 <input type="hidden" name="User.CalendarPermission" value="0" />
-                &nbsp; &nbsp;@Translation.Get("Användaren har rättighet att administrera Aktuellt", Enums.TranslationSource.TextTranslation)
+                &nbsp; &nbsp;@Translation.Get("Användaren har rättighet till aktuellt", Enums.TranslationSource.TextTranslation)
             </td>
         </tr>
         <tr>
@@ -335,7 +335,7 @@
             <td>
                 <input data-field="contractPermission" type="checkbox" name="User.ContractPermission" @(Model.User.ContractPermission == 1 ? "checked=checked" : "") value="1"/>
                 <input type="hidden" name="User.ContractPermission" value="0" />
-                &nbsp; &nbsp;@Translation.GetCoreTextTranslation("Användaren har administratörsbehörighet till internt kontrakt")
+                &nbsp; &nbsp;@Translation.GetCoreTextTranslation("Användaren har rättighet till avtal")
             </td>
         </tr>
         <tr>
