[FIX] #61851 - Product area - shows only 2 levels

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -1110,7 +1110,7 @@
                                                     <button class="btn dropdown-toggle" data-toggle="dropdown">
                                                         <span class="caret"></span>
                                                     </button>
-                                                    <ul class="dropdown-menu">
+                                                    <ul class="dropdown-menu subddMenu parentddMenu">
                                                         <li><a href="#">@Translation.Get("--", Enums.TranslationSource.TextTranslation)</a></li>
                                                         @Html.ProductAreaDropdownButtonString(Model.ProductAreas)
                                                     </ul>
