--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseTemplateTree.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseTemplateTree.cshtml
@@ -17,17 +17,8 @@
              @Translation.Get("Ärendemall")
             <span class="caret"> </span>
         </button>
-        <ul class="dropdown-menu parentddMenu subddMenu" style="z-index: 99999999999; max-height: 704px;">
+        <ul class="dropdown-menu subddMenu parentddMenu" style="z-index: 99999999999; max-height: 704px;">
             @Html.CaseSolutionDropdownButtonString(Model.CaseTemplateCategoryTree, Model.CustomerId, isJS)
         </ul>    
     }
 </div>
-
-<script type="text/javascript">
-    $(function() {
-        $('#divCaseTemplate .dropdown-submenu.DynamicDropDown_Up').off('mousemove');
-        $('#divCaseTemplate .dropdown-submenu.DynamicDropDown_Up').on('mousemove', function (event) {
-            dynamicDropDownBehaviorOnMouseMove(event);
-        });
-    })
-</script>
