--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Search.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Search.cshtml
@@ -152,7 +152,8 @@
                                      <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
                                          <span class="caret"></span>
                                      </button>
-                                     <ul class="dropdown-menu">
+                                 @*<ul class="dropdown-menu modified">*@
+                                     <ul class="dropdown-menu subddMenu parentddMenu">
                                          <li><a href="#">@Translation.Get("--", Enums.TranslationSource.TextTranslation)</a></li>
                                          @Html.ProductAreaDropdownButtonString(Model.filterProductArea, true)
                                      </ul>
