--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
@@ -134,6 +134,22 @@
                                         @Translation.Get("Visa på startsidan", Enums.TranslationSource.TextTranslation)
                                     </td>
                                     <td>
+                                        <input type="checkbox" name="customer.ShowOperationalLogOnExtPage" @(Model.Customer.ShowOperationalLogOnExtPage == 1 ? "checked=checked" : "") value="1" />
+                                        <input type="hidden" name="customer.ShowOperationalLogOnExtPage" value="0" />
+                                        &nbsp; &nbsp; @Translation.Get("Visa Drifftlogg på startsidan", Enums.TranslationSource.TextTranslation)
+                                    </td>                                  
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>
+                                        <input type="checkbox" name="customer.ShowCalenderOnExtPage" @(Model.Customer.ShowCalenderOnExtPage == 1 ? "checked=checked" : "") value="1" />
+                                        <input type="hidden" name="customer.ShowCalenderOnExtPage" value="0" />
+                                        &nbsp; &nbsp; @Translation.Get("Visa Aktuellt på startsidan", Enums.TranslationSource.TextTranslation)
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>
                                         <input type="checkbox" name="customer.ShowBulletinBoardOnExtPage" @(Model.Customer.ShowBulletinBoardOnExtPage == 1 ? "checked=checked" : "") value="1" />
                                         <input type="hidden" name="customer.ShowBulletinBoardOnExtPage" value="0" />
                                         &nbsp; &nbsp; @Translation.Get("Visa Anslagstavlan på startsidan", Enums.TranslationSource.TextTranslation)
