--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using DH.Helpdesk.BusinessData.Enums.Contracts
-@model DH.Helpdesk.Web.Models.Contract.ContractIndexViewModel
+﻿@model DH.Helpdesk.Web.Models.Contract.ContractIndexViewModel
 
 @section Scripts
 {
@@ -48,179 +47,16 @@
         </ul>
         <div class="tab-content">
             <div class="tab-pane tab-pane-border active" id="fragment-1">
-                <div>
+                <div style="margin:auto 5px">
                     @using (Html.BeginForm("Search", "Contracts", FormMethod.Post, new {id = "search_form"}))
                     {
                         <input type="hidden" id="currentCustomerId" name="CustomerId" value="@Model.Customer.Id" />
                         <div class="row">
-                            <div class="span8">
-                                <table class="tableform">
-                                    <tr>
-                                        <td style="width: 100px">@Translation.GetCoreTextTranslation("Kategori")</td>
-                                        <td>
-                                            <select id="lstContractCategories" name="Categories" data-field="region" data-placeholder="@Translation.GetCoreTextTranslation("Välj en eller flera")" multiple="multiple" class="chosen-select">
-                                                @foreach (var a in Model.ContractCategories)
-                                                {
-                                                    <option value="@a.Id">@a.Name</option>
-                                                }
-                                            </select>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td style="width: 100px">@Translation.GetCoreTextTranslation("Leverantör")</td>
-                                        <td>
-                                            <select id="lstSuppliers" name="Suppliers" data-field="region" data-placeholder="@Translation.GetCoreTextTranslation("Välj en eller flera")" multiple="multiple" class="chosen-select">
-                                                @foreach (var s in Model.Suppliers)
-                                                {
-                                                    <option value="@s.Id">@s.Name</option>
-                                                }
-                                            </select>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td style="width: 100px">@Translation.GetCoreTextTranslation("Ansvarig uppföljning")</td>
-                                        <td>
-                                            <select id="lstResponsible" name="ResponsibleUsers" data-field="region" data-placeholder="@Translation.GetCoreTextTranslation("Välj en eller flera")" multiple="multiple" class="chosen-select">
-                                                @foreach (var s in Model.Users)
-                                                {
-                                                    <option value="@s.Id">@s.SurName @s.FirstName</option>
-                                                }
-                                            </select>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td style="width: 100px">@Translation.GetCoreTextTranslation("Avdelning")</td>
-                                        <td>
-                                            <select id="lstDepartment" name="Departments" data-field="region" data-placeholder="@Translation.GetCoreTextTranslation("Välj en eller flera")" multiple="multiple" class="chosen-select">
-                                                @foreach (var s in Model.Departments)
-                                                {
-                                                    <option value="@s.Id">@s.DepartmentName</option>
-                                                }
-                                            </select>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td style="width: 100px">@Translation.GetCoreTextTranslation("Visa")</td>
-                                        <td>
-                                            <select id="lstShow" name="ShowContracts" data-field="region" data-placeholder="@Translation.GetCoreTextTranslation("Välj")" class="inputw300">
-                                                @foreach (var s in Model.ShowContracts)
-                                                {
-                                                    <option selected="@s.Value.Equals(Model.SelectedState.ToString(), StringComparison.OrdinalIgnoreCase)" value="@s.Value">@s.Text</option>
-                                                }
-                                            </select>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="span3">@Translation.GetCoreTextTranslation("Sök")</td>
-                                        <td>
-                                            @Html.TextBoxFor(m => m.SearchText, new { @style = "width:285px", @id = "txtSearch" })
-                                            @*<input type="submit" value="@Translation.Get("Sök")" class="btn" />*@
-                                            @*<input type="button" class="btn" id="searchQueryBtn" value="@Translation.Get("Sök", Enums.TranslationSource.TextTranslation)" onclick="submit();" />*@
-                                            <input type="submit" class="btn" id="searchQueryBtn" value="@Translation.GetCoreTextTranslation("Sök")" />
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td colspan="2">
-                                            &nbsp;
-                                        </td>
-                                    </tr>
-                                </table>
-                            </div>
-                            <div class="span5">
-                                <table class="tableform">
-                                    <tr class="date-block">
-                                        <td>
-                                            @Translation.GetCoreTextTranslation(ContractFieldLabels.ContractStartDate)
-                                        </td>
-                                        <td>
-                                            @Html.EditorFor(m => Model.StartDateFrom, "DatePicker", new { id = "divSearch_StartDateFrom" })
-                                            @Html.EditorFor(m => Model.StartDateTo, "DatePicker", new { id = "divSearch_StartDateTo" })
-                                        </td>
-                                    </tr>
-                                    <tr class="date-block">
-                                        <td>
-                                            @Translation.GetCoreTextTranslation(ContractFieldLabels.ContractEndDate)
-                                        </td>
-                                        <td>
-                                            @Html.EditorFor(m => Model.EndDateFrom, "DatePicker", new { id = "divSearch_EndDateFrom" })
-                                            @Html.EditorFor(m => Model.EndDateTo, "DatePicker", new { id = "divSearch_EndDateTo" })
-                                        </td>
-                                    </tr>
-                                    <tr class="date-block">
-                                        <td>
-                                            @Translation.GetCoreTextTranslation(ContractFieldLabels.Noticedate)
-                                        </td>
-                                        <td>
-                                            @Html.EditorFor(m => Model.NoticeDateFrom, "DatePicker", new { id = "divSearch_NoticeDateFrom" })
-                                            @Html.EditorFor(m => Model.NoticeDateTo, "DatePicker", new { id = "divSearch_NoticeDateTo" })
-                                        </td>
-                                    </tr>
-
-                                </table>
+                            <div class="pull-left">
+                                @Html.Partial("_ContractsSearchFilter", Model.SearchFilterModel)
                             </div>
                             <div class="pull-right">
-                                <div align="right">
-                                    <table style="border-style: solid; border-width: thin; color: gray; font-weight: bold; font-size: 11px; border-color: #E0E0E0; font-family: Helvetica Neue, Helvetica, Arial, sans-serif">
-                                        <tr style="border-style: solid; border-width: thin">
-                                            <td colspan="2" style="color: black; background-color: #f9f9f9; padding-left: 5px">
-                                                @Translation.GetCoreTextTranslation("Avtal")
-                                            </td>
-                                        </tr>
-                                        <tr style="border-style: solid; border-width: thin; border-color: #E0E0E0">
-                                            <td style="border-style: solid; border-width: thin; border-color: #E0E0E0; padding-left: 5px">
-                                                @Translation.GetCoreTextTranslation("Antal")
-                                            </td>
-
-                                            <td style="border-style: solid; border-width: thin; text-align: right; width: 100px; border-color: #E0E0E0; padding-right: 5px">
-                                                @Model.TotalCases
-                                            </td>
-                                        </tr>
-                                        <tr style="border-style: solid; border-width: thin; border-color: #E0E0E0">
-                                            <td style="border-style: solid; border-width: thin; padding-right: 100px; border-color: #E0E0E0; padding-left: 5px">
-                                                @Translation.GetCoreTextTranslation("Pågående")
-                                            </td>
-
-                                            <td style="border-style: solid; border-width: thin; text-align: right; border-color: #E0E0E0; padding-right: 5px">
-                                                @Model.OnGoingCases
-                                            </td>
-                                        </tr>
-                                        <tr style="border-style: solid; border-width: thin; border-color: #E0E0E0">
-                                            <td style="border-style: solid; border-width: thin; border-color: #E0E0E0; padding-left: 5px">
-                                                @Translation.GetCoreTextTranslation("Avslutade")
-                                            </td>
-
-                                            <td style="border-style: solid; border-width: thin; text-align: right; border-color: #E0E0E0; padding-right: 5px">
-                                                @Model.FinishedCases
-                                            </td>
-                                        </tr>
-                                        <tr style="border-style: solid; border-width: thin; border-color: #E0E0E0">
-                                            <td style="border-style: solid; border-width: thin; border-color: #E0E0E0; padding-left: 5px">
-                                                <span>@Translation.GetCoreTextTranslation("För uppsägning")</span>
-                                            </td>
-                                            <td style="border-style: solid; border-width: thin; text-align: right; border-color: #E0E0E0; padding-right: 5px">
-                                                <span> @Model.ContractNoticeOfRemovalCount </span>
-                                            </td>
-                                        </tr>
-                                        <tr style="border-style: solid; border-width: thin; border-color: #E0E0E0">
-                                            <td style="border-style: solid; border-width: thin; border-color: #E0E0E0; padding-left: 5px">
-                                                <span>@Translation.GetCoreTextTranslation("För uppföljning")</span>
-                                            </td>
-
-                                            <td style="border-style: solid; border-width: thin; text-align: right; border-color: #E0E0E0; padding-right: 5px">
-                                                <span> @Model.ContractFollowUpCount </span>
-                                            </td>
-                                        </tr>
-                                        <tr style="border-style: solid; border-width: thin; border-color: #E0E0E0">
-                                            <td style="border-style: solid; border-width: thin; border-color: #E0E0E0; padding-left: 5px">
-                                                <span>@Translation.GetCoreTextTranslation("Löpande")</span>
-                                            </td>
-
-                                            <td style="border-style: solid; border-width: thin; text-align: right; border-color: #E0E0E0; padding-right: 5px">
-                                                <span> @Model.RunningCases</span>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </div>
+                                @Html.Partial("_ContractsSearchSummary", Model.SearchSummaryModel)
                             </div>
                         </div>
                     }
@@ -228,11 +64,6 @@
                 <div id="contracts_grid">
                     @Html.Partial("_ContractsIndexRows", Model.Rows)
                 </div>
-
-                @*<div id="SettingsTableContainer">
-
-                        @Html.Partial("_Settings", Model.Setting)
-                    </div>*@
 
             </div>
             <div class="tab-pane tab-pane-border" id="fragment-2">
