--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/GlobalSetting/DataPrivacy.cshtml
@@ -161,7 +161,7 @@
 
 <div id="operationProgress" class="loading-msg" style="display:none">
     <div class="content-wrapper">
-        <div id="gdprTask" class="loader">@Translation.GetCoreTextTranslation("Löpande")...<span id="taskProgress">0</span>%</div>
+        <div id="gdprTask" class="loader">@Translation.GetCoreTextTranslation("Laddar...")<span id="taskProgress">0</span>%</div>
     </div>
 </div>
 
