--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/_Security.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/_Security.cshtml
@@ -220,7 +220,7 @@
             <td>
                 <input data-field="administerOrderPermission" type="checkbox" name="OrderP2" id="OrderP2" @(Model.OrderP2 == 1 ? "checked=checked" : "") value="1"/>
                 <input type="hidden" name="OrderP2" id="hidOrderP2" value="0" />
-                &nbsp; &nbsp;@Translation.Get("Användaren kan administrera beställningar", Enums.TranslationSource.TextTranslation)
+                &nbsp; &nbsp;@Translation.Get("Användaren har rättighet att administrera beställningar", Enums.TranslationSource.TextTranslation)
             </td>
         </tr>
         <tr>
