--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/_ContractsFieldsSettings.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/_ContractsFieldsSettings.cshtml
@@ -1,11 +1,9 @@
-﻿@using DH.Helpdesk.Web.Infrastructure
-@using DH.Helpdesk.Common.Enums
+﻿@using DH.Helpdesk.Common.Enums
 @using DH.Helpdesk.Web.Models.Contract
-@model List<DH.Helpdesk.Web.Models.Contract.ContractsSettingRowViewModel>
+@model List<ContractsSettingRowViewModel>
 @{
-    
     ViewBag.Title = "_ContractsFieldsSettings";
-}
+ }
 
 @{ var row = new ContractsSettingRowViewModel(); }          
     <tr>
