--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/_ContractsIndexRows.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/_ContractsIndexRows.cshtml
@@ -6,6 +6,7 @@
     var searchSummary = Model.SearchSummary;   
  }
 
+<div>@Translation.GetCoreTextTranslation("Poster i sökresultat"): @Model.TotalRowsCount</div>
 <div id="ContractIndexRows">
     <table class="table table-striped table-bordered table-hover" id="contractOverview">
         <thead>
@@ -14,7 +15,7 @@
                 {
                     if (SessionFacade.CurrentLanguageId == 2)
                     {
-                        <th onclick="SortCol('@c.ContractField');" style="cursor: pointer;" class="MyTest">
+                        <th onclick="SortCol('@c.ContractField');" style="cursor: pointer;">
                             @c.ContractFieldLable_Eng
                             @if (Model.SortBy != null && c.ContractField == Model.SortBy.ColumnName)
                             {
@@ -34,7 +35,7 @@
                     }
                     else
                     {
-                        <th onclick="SortCol('@c.ContractField');" style="cursor: pointer;" class="MyTest">
+                        <th onclick="SortCol('@c.ContractField');" style="cursor: pointer;">
                             @c.ContractFieldLable
                             @if (Model.SortBy != null && c.ContractField == Model.SortBy.ColumnName)
                             {
@@ -57,13 +58,6 @@
                 @{
                     foreach (var row in Model.Data)
                     {
-                        //If(iStatus = 10) Or(iStatus <> 3 And iStatus <> 2) Or(iStatus = 3 And CBool(isInNoticeOfRemoval(rsDH_Support("Finished"), rsDH_Support("NoticeDate"))) = True)
-                        //Or(iStatus = 2 And CBool(isInFollowUp(rsDH_Support("Finished"), rsDH_Support("ContractStartDate"), rsDH_Support("ContractEndDate"), rsDH_Support("FollowUpInterval"))) = True) Then
-                        if ((Model.SelectedShowStatus == 10) ||
-                            (Model.SelectedShowStatus != 3 && Model.SelectedShowStatus != 2) ||
-                            (Model.SelectedShowStatus == 3 && row.IsInNoticeOfRemoval) ||
-                            (Model.SelectedShowStatus == 2 && row.IsInFollowUp))
-                        {
                         <tr class="@(row.IsInNoticeOfRemoval ? "textred" : "")">
                             @foreach (var s in Model.Columns)
                             {
@@ -243,7 +237,6 @@
                             }
                             @*@Html.HiddenFor(r => row.ContractId)*@
                         </tr>
-                        }
                     }
                 }
         </table>
