--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseTemplateTree.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseTemplateTree.cshtml
@@ -10,7 +10,7 @@
     }
 }
 
-<div id="divCaseTemplate" class="btn-group DynamicDropDown">
+<div id="divCaseTemplate" class="btn-group">
     @if (Model.CaseTemplateCategoryTree != null && Model.CaseTemplateCategoryTree.Count > 0)
     {
         <button class="btn dropdown-toggle" data-toggle="dropdown" id="btnCaseTemplateTree" >
