--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -1067,7 +1067,7 @@
                                                 <span id="ProductAreaFieldCaption"> @CaseFieldCaption(GlobalEnums.TranslationCaseFields.ProductArea_Id, "Produktområde") </span>
                                             </td>
                                             <td colspan="2">
-                                                <div id="divProductArea" class="btn-group DynamicDropDown">
+                                                <div id="divProductArea" class="btn-group">
                                                     @{
                                                         string disabledProductArea = Model.GetDisabledString(GlobalEnums.TranslationCaseFields.ProductArea_Id, CaseSolutionFields.ProductArea);
                                                     }
