[Fix] #56090 remove visa from operational log

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/OperationLog/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/OperationLog/_Input.cshtml
@@ -168,7 +168,7 @@
                                    <td>
                                        <input type="checkbox" name="OperationLog.PublicInformation" @(Model.OperationLog.PublicInformation == 1 ? "checked=checked" : "")  value="1" />                                        
                                        <input type="hidden" name="OperationLog.PublicInformation" value="0" /> 
-                                       @Translation.Get("Visa", Enums.TranslationSource.TextTranslation)&nbsp;
+                                       @*@Translation.Get("Visa", Enums.TranslationSource.TextTranslation)&nbsp;*@
                                        @*<input type="checkbox" name="OperationLog.Popup" @(Model.OperationLog.Popup == 1 ? "checked=checked" : "")  value="1" />                                                                                                                       
                                        <input type="hidden" name="OperationLog.Popup" value="0" />                                                                               
                                        @Translation.Get("Popup", Enums.TranslationSource.TextTranslation)*@
